--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^2.2.2",
     "jsoneditor": "^5.14.1",
     "moment": "^2.21.0",
+    "pug": "^2.0.3",
     "sweet-modal-vue": "^2.0.0",
     "vue": "^2.5.16",
     "vue-amap": "^0.3.1",
@@ -46,6 +47,7 @@
     "vue-router": "^2.2.0",
     "vue-simple-uploader": "^0.4.2",
     "vue-upload-component": "^2.8.4",
+    "vue-waterfall": "^1.0.6",
     "vue2-editor": "^2.4.2",
     "vue2-quill-editor": "^2.0.26",
     "vueditor": "^0.3.1",
@@ -117,6 +119,7 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.4",
     "vue-template-compiler": "^2.5.16",
+    "vue-waterfall-easy": "^1.0.8",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-middleware": "^1.10.0",
